<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_login"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.mobileproject.game.RegisterActivity"
android:orientation="vertical">

<ImageView
    android:src="@drawable/banner_reg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


<TextView android:id="@+id/textview_register_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_username"
    android:textSize="@dimen/textsize_register_usernamepassword" />

<EditText android:id="@+id/edittext_register_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_usernamehint"
    android:inputType="textNoSuggestions"
    android:textSize="@dimen/textsize_register_usernamepassword" />

<TextView android:id="@+id/textview_register_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_password"
    android:textSize="@dimen/textsize_register_usernamepassword"
    android:layout_marginTop="@dimen/margintop_login_underFields"/>

<EditText android:id="@+id/edittext_register_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_passwordhint"
    android:inputType="textPassword"
    android:textSize="@dimen/textsize_login_usernamepassword" />

<TextView android:id="@+id/textview_login_password2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_retypepassword"
    android:textSize="@dimen/textsize_register_usernamepassword"
    android:layout_marginTop="@dimen/margintop_login_underFields"/>

<EditText android:id="@+id/edittext_register_password2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_passwordhint"
    android:inputType="textPassword"
    android:textSize="@dimen/textsize_login_usernamepassword"
    android:layout_marginBottom="@dimen/margin_register_belowButtons"/>

<android.support.v7.widget.ButtonBarLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">


    <Button
    android:id="@+id/button_register_register"
    android:layout_width="200dp"
    android:layout_height="70dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="@dimen/menu_itmes_margin_gap"
    android:layout_gravity="center"
    android:background="@drawable/btn_reg"
    android:layout_marginEnd="@dimen/margin_register_belowButtons"
    android:onClick="register"
    android:textColor="@color/colorBlack" />
</android.support.v7.widget.ButtonBarLayout>

<TextView android:id="@+id/textview_register_warning"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:textColor="@color/color_red"/>
</LinearLayout>
